--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,4 +10,49 @@ Lilas: #5f2c82
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box; /*borda faz parte da conta de largura*/
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body, html{
+    background-color: #5f2c82;
+    width: 100vw;
+    height: 100vh;
+}
+
+main{
+
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+
+}
+
+section#login{
+    position: absolute; /* centralizar*/
+    top: 50%; /* centralizar*/
+    left: 50%; /* centralizar*/
+    transform: translate(-50%, -50%); /* centralizar*/
+
+    overflow: hidden; /*tudo fora da borda fica escondido*/
+    background-color: white; 
+    border-radius: 20px;  
+    text-align: center;
+    height: 500px;
+    width: 250px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+}
+
+section > div#imagem{
+    display: block;
+    background: #5f2c82 url(../imagens/pexels-miguel-á-padriñán-2882566.jpg) no-repeat;
+
+    background-position: center center; /* centralizar imagem */
+    background-size: cover;
+    height: 200px;
+}
+
+section > div#formulario {
+    display: block;
+    padding: 10px;
 }
