--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,7 +15,7 @@ Lilas: #5f2c82
 }
 
 body, html{
-    background-color: #5f2c82;
+    background-color: #fd5555;
     width: 100vw;
     height: 100vh;
 }
@@ -41,6 +41,9 @@ section#login{
     height: 500px;
     width: 250px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+
+    transition: width 0.3s, height 0.3s; /*animação*/
+    transition-timing-function: ease; /*suaviza a animação*/
 }
 
 section > div#imagem{
