--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,7 +32,7 @@ section#login{
     position: absolute; /* centralizar*/
     top: 50%; /* centralizar*/
     left: 50%; /* centralizar*/
-    transform: translate(-50%, -50%); /* centralizar*/
+   
 
     overflow: hidden; /*tudo fora da borda fica escondido*/
     background-color: white; 
@@ -44,6 +44,7 @@ section#login{
 
     transition: width 0.3s, height 0.3s; /*animação*/
     transition-timing-function: ease; /*suaviza a animação*/
+    transform: translate(-50%, -50%); /* centralizar*/
 }
 
 section > div#imagem{
@@ -71,16 +72,40 @@ div#formulario > p {
 
 form > div.campo{
     background-color: #fd5555;
+    border: 2px solid #fd5555;
     width: 100%;
     height: 40px;
     display: block;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 
 }
 
 div.campo > label {
     display: none;
+}
+
+div.campo > span {
+
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #ff9595;
+    font-size: 1em;
+    width: calc(100% - 44px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px); /* sempre que tiver uma tranformação usar ela no final para evitar erro de compatibilidade*/
+}
+
+div.campo > input:focus-within{
+    background-color: white;
 }
 
 form > input[type=submit]{
